# TNN

./: .clangd  .env.example  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  build.sh  docker-compose.yml  pyproject.toml
benchmarks/: CMakeLists.txt  attention_benchmark.cpp  batchnorm_benchmark.cpp  conv2d_benchmark.cpp  copy_benchmark.cpp  dense_benchmark.cpp  gemm_benchmark.cpp  grad_clear_benchmark.cpp  pipeline_benchmark.cpp  roce_communicator_benchmark.cpp  serialization_benchmark.cpp  tcp_communicator_benchmark.cpp
cmake/: CompilerFlags.cmake  DefaultTargetConfig.cmake  FindCUDA.cmake  FindCUDNN.cmake  FindTBB.cmake  LinkDNNL.cmake
configs/: cnn_mnist.json  default_config.json  example_config.jsonc  gpt2_config.json  resnet50_config.json  tcp_config.json  wrn16_8_config.json
doc/: CMakeLists.txt  conf.py  conf.py.in  index.rst
docs/: data_augmentation.md
examples/: CMakeLists.txt  README.md  device_manager_example.cpp  gpt2_inference.cpp  graph_api_v2_test.cpp  graph_test.cpp  hardware_info_example.cpp  inferencer.cpp  legacy_roce_coordinator.cpp  legacy_tcp_coordinator.cpp  legacy_trainer.cpp  metrics_example.cpp  roce_coordinator.cpp  roce_worker.cpp  tcp_coordinator.cpp  tcp_worker.cpp  test_del.cpp  trainer.cpp  ucx_coordinator.cpp
src/: CMakeLists.txt  synet_lib.cpp  tnn_lib.cpp  tunx_lib.cpp
src/common/: config.cpp
src/cuda/: error_handler.cu  helpers.cu
src/cuda/cudnn/: common.cu
src/data_augmentation/: augmentation.cpp
src/data_loading/: data_loading.cpp
src/data_loading/legacy/: data_loading.cpp
src/device/: device.cpp  device_manager.cpp
src/device/contexts/: cpu_context.cpp  cuda_context.cpp
src/distributed/: distributed.cpp
src/logging/: logger.cpp
src/math/cpu/: dgemm.cpp  math.cpp  sgemm.cpp
src/math/cuda/: axpy.cu  cudnn_gemm.cu  gemm.cu
src/matrix/: matrix.cpp
src/nn/: csv_logger.cpp  example_graphs.cpp  example_models.cpp  graph.cpp  graph_api.cpp  layer.cpp  nn.cpp  siso_layer.cpp  train.cpp
src/nn/activations_impl/: elu.cpp  gelu.cpp  leaky_relu.cpp  linear.cpp  relu.cpp  sigmoid.cpp  tanh.cpp
src/nn/activations_impl/cpu/: elu_kernels.cpp  gelu_kernels.cpp  leaky_relu_kernels.cpp  relu_kernels.cpp  sigmoid_kernels.cpp  softmax_kernels.cpp  tanh_kernels.cpp
src/nn/activations_impl/cuda/: elu_kernels.cu  gelu_kernels.cu  leaky_relu_kernels.cu  relu_kernels.cu  sigmoid_kernels.cu  softmax_kernels.cu  tanh_kernels.cu
src/nn/blocks_impl/: attention_block.cpp  flash_attention_block.cpp  msequential.cpp  residual_block.cpp  sequential.cpp
src/nn/blocks_impl/cpu/: causal_mask.cpp  permute_heads.cpp  softmax.cpp
src/nn/blocks_impl/cuda/: causal_mask.cu  cudnn_flash_attention_ops.cu  permute_heads.cu  softmax.cu
src/nn/engines/: cpu_engine.cpp  cuda_engine.cu  cudnn_engine.cu
src/nn/layers_impl/: activation_layer.cpp  add_layer.cpp  avgpool2d_layer.cpp  batchnorm_layer.cpp  class_token_layer.cpp  conv2d_layer.cpp  dense_layer.cpp  div_layer.cpp  dropout_layer.cpp  elu_layer.cpp  embedding_layer.cpp  flatten_layer.cpp  gelu_layer.cpp  groupnorm_layer.cpp  identity_layer.cpp  layer_norm_layer.cpp  leaky_relu_layer.cpp  legacy_avgpool2d_layer.cpp  legacy_batchnorm_layer.cpp  legacy_conv2d_layer.cpp  legacy_dense_layer.cpp  legacy_maxpool2d_layer.cpp  linear_layer.cpp  maxpool2d_layer.cpp  mul_layer.cpp  parameterized_layer.cpp  positional_embedding_layer.cpp  relu_layer.cpp  sdpa_layer.cpp  sigmoid_layer.cpp  slice_layer.cpp  sub_layer.cpp  tanh_layer.cpp  transpose_layer.cpp
src/nn/layers_impl/cpu/: avgpool_nchw_ops.cpp  avgpool_ops.cpp  batchnorm_nchw_ops.cpp  batchnorm_nhwc_ops.cpp  class_token_ops.cpp  conv2d_nchw_ops.cpp  dense_ops.cpp  dnnl_batchnorm_ops.cpp  dnnl_conv2d_ops.cpp  dnnl_maxpool_ops.cpp  dropout.cpp  embedding_ops.cpp  groupnorm_ops.cpp  layer_norm_ops.cpp  maxpool_nchw_ops.cpp  maxpool_ops.cpp  relu_ops.cpp  sdpa_ops.cpp  slice_ops.cpp
src/nn/layers_impl/cuda/: avgpool_nchw_ops.cu  avgpool_ops.cu  batchnorm_nchw_ops.cu  class_token_ops.cu  conv2d_nchw_ops.cu  cudnn_batchnorm_ops.cu  cudnn_conv2d_nchw_ops.cu  cudnn_conv2d_ops.cu  cudnn_layer_norm_ops.cu  dense_ops.cu  dropout.cu  embedding_ops.cu  groupnorm_ops.cu  layer_norm_ops.cu  maxpool_nchw_ops.cu  maxpool_ops.cu  relu_ops.cu  sdpa_ops.cu  slice_ops.cu
src/nn/legacy/: example_models.cpp
src/nn/loss_impl/cpu/: loss_ops.cpp
src/nn/loss_impl/cuda/: loss_ops.cu
src/nn/metrics_impl/cpu/: metrics.cpp
src/nn/metrics_impl/cuda/: metrics.cu
src/nn/optimizers_impl/cpu/: adam_kernels.cpp  sgd_kernels.cpp
src/nn/optimizers_impl/cuda/: adam_kernels.cu  sgd_kernels.cu
src/ops/cpu/: dkernels.cpp  permute_heads.cpp  skernels.cpp
src/ops/cuda/: kernels.cu  permute_heads.cu
src/partitioner/: graph_partitioner.cpp
src/profiling/: profiling.cpp
src/tensor/: tensor.cpp
src/tensor/cuda/: tensor_ops.cu
src/threading/: threading.cpp
src/type/: type.cpp
src/utils/: hardware_info.cpp  thread_affinity.cpp  utils.cpp
tensorflow/: tensorflow_trainer.py
torch/: howtorun.md  plot_compare_gpt2_loss.py  plot_compare_resnet50.py  plot_compare_resnet50_loss.py  plot_tflops_comparison.py  plot_tnn_gpt2_loss_ieee.py  plot_tnn_metrics_ieee.py  plot_torch_gpt2_loss_ieee.py  torch_inference.py  torch_pipeline_parallel.py  torch_pipeline_parallel_1f1b.py  torch_pipeline_parallel_1f1b_wallclock.py  torch_trainer.py
unit_tests/: CMakeLists.txt  archiver_test.cpp  attention_block_test.cpp  bf16_test.cpp  cuda_batchnorm_ops_test.cpp  cuda_conv2d_nchw_ops_test.cpp  cuda_dense_ops_test.cpp  cuda_kernels_test.cpp  cuda_loss_funcs_test.cpp  cuda_maxpool_ops_test.cpp  device_manager_test.cpp  engine_test_utils.hpp  fp16_test.cpp  gpu_tensor_ops_test.cpp  gpu_tensor_test.cpp  groupnorm_layer_test.cpp  layer_device_agnosticity_test.cpp  legacy_avgpool_layer_test.cpp  legacy_batchnorm_layer_test.cpp  legacy_conv2d_layer_test.cpp  legacy_dense_layer_test.cpp  legacy_maxpool2d_layer_test.cpp  partitioner_test.cpp  residual_block_test.cpp  slice_ops_test.cpp  tensor_test.cpp  test_archiver.cpp  test_bf16.cpp  test_cpu_engine.cpp  (+15 more)
(+292 files in other folders)
